[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/MainMenu/menu_cube.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/MenuBoxFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sprites/MainMenu/arrow_left.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/MainMenu/arrow_right.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scripts/ManiMenu/MenuBox.gd" type="Script" id=5]
[ext_resource path="res://Assets/Styles/MenuButtonPressedStyle.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="MenuBox" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="MenuBox"]
position = Vector2( -4, -3 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="MenuBox/Sprite"]
margin_left = -256.0
margin_top = -468.0
margin_right = 256.0
margin_bottom = -162.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.196078 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color = Color( 0, 0, 0, 0.392157 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.627451 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "play"
flat = true

[node name="QuitButton" type="Button" parent="MenuBox/Sprite"]
margin_left = -465.0
margin_top = 260.0
margin_right = 47.0
margin_bottom = 566.0
rect_rotation = -90.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.196078 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color = Color( 0, 0, 0, 0.392157 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.627451 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
text = "QUIT"
flat = true

[node name="SettingsButton" type="Button" parent="MenuBox/Sprite"]
margin_left = 467.0
margin_top = -275.0
margin_right = 1028.0
margin_bottom = 31.0
rect_rotation = 90.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.196078 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color = Color( 0, 0, 0, 0.392157 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.627451 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 5 )
text = "SETTINGS"
flat = true

[node name="StatsButton" type="Button" parent="MenuBox/Sprite"]
margin_left = 256.0
margin_top = 468.0
margin_right = 768.0
margin_bottom = 774.0
rect_rotation = 180.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.196078 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color = Color( 0, 0, 0, 0.392157 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0.627451 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "STATS"
flat = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MenuBox"]
shape = SubResource( 1 )

[node name="RightButton" type="Button" parent="."]
margin_left = 516.0
margin_top = -221.0
margin_right = 662.0
margin_bottom = -3.0
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 4 )
flat = true

[node name="LeftButton" type="Button" parent="."]
margin_left = -670.0
margin_top = -221.0
margin_right = -524.0
margin_bottom = -3.0
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 3 )
flat = true

[connection signal="pressed" from="MenuBox/Sprite/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuBox/Sprite/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MenuBox/Sprite/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MenuBox/Sprite/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
